# Collection

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .pylintrc  Dockerfile  README.md  celerybeat-schedule.db  conftest.py  manage.py  pyproject.toml  pytest.ini
backend/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_created_at_user_updated_at_and_more.py  0003_alter_user_is_active_profile_follow_user_following_and_more.py
backend/accounts/models/: __init__.py  follow.py  profile.py  user.py
backend/accounts/selectors/: user.py
backend/accounts/serializers/: profile.py  user.py
backend/accounts/views/: auth.py  profile.py  user.py
backend/apps/accounts/: admin.py  apps.py  managers.py  pagination.py  permissions.py  schemas.py  signals.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_remove_follow_accounts_fo_followe_7c063a_idx_and_more.py  0003_follow_is_active_profile_is_active_and_more.py  0004_profile_avatar_md_profile_avatar_sm.py
backend/apps/accounts/models/: __init__.py  follow.py  profile.py  user.py
backend/apps/collection/: admin.py  apps.py  pagination.py  urls.py
backend/apps/games/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/games/views/: games.py  (+2 more)
backend/apps/notifications/: admin.py  models.py  pagination.py  serializer.py  services.py  urls.py  views.py
backend/apps/posts/: admin.py  apps.py  pagination.py  permissions.py  urls.py
backend/collection/: admin.py  urls.py
backend/collection/migrations/: 0001_initial.py  0002_item_description.py  0003_alter_item_description.py  0004_item_pricecharting.py  0005_alter_item_pricecharting.py
backend/collection/models/: collection.py  item.py
backend/collection/permissions/: collection.py  item.py
backend/collection/serializers/: collection.py  item.py
backend/collection/service/: collection.py
backend/collection/views/: collection.py  item.py
backend/config/: celery.py  settings.py  settings_test.py  urls.py
backend/core/: admin.py  models.py
backend/core/utils/: images.py
backend/games/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/games/migrations/: 0001_initial.py  0002_pricechartingconnect.py  0003_delete_pricechartingintegration_and_more.py  0004_alter_pricechartingconnect_current_and_more.py
backend/games/services/: pricecharting.py  search.py
backend/ops/gunicorn/: gunicorn.conf.py
backend/ops/requirements/: ci.txt  dev.txt  prod.txt
backend/posts/: admin.py  pagination.py  permissions.py  selectors.py  urls.py
backend/posts/migrations/: 0001_initial.py  0002_alter_postimage_options_and_more.py
backend/posts/models/: __init__.py  comment.py  image.py  post.py  reaction.py
backend/posts/serializers/: __init__.py  author.py  comment.py  post.py
backend/posts/services/: comment.py  post.py
backend/posts/views/: comment.py  post.py
backend/server/: celery.py  settings.py  settings_test.py  urls.py  views.py
(+160 files in other folders)
