[project]
name = "collectioner-backend"
version = "1.0.0"
description = ""
authors = [
    {name = "Petr",email = "petr.ishimov@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=4.2,<5.0)",
    "djangorestframework (>=3.14,<3.16)",
    "djangorestframework-simplejwt (>=5.3,<6.0)",
    "django-cors-headers (>=4.0,<5.0)",
    "drf-spectacular (>=0.27,<0.28)",
    "drf-spectacular-sidecar (>=2024.4,<2026.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
